Feat adicao do marketplace e melhoria em tokens e lumx Post
